--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "express-validator": "^7.0.1",
     "jwt": "^0.2.0",
     "prisma": "^5.5.2"
+  },
+  "scripts": {
+    "dev" : "nodemon index.js",
+    "start" : "node index.js"
   }
 }
