--- a/package.json
+++ b/package.json
@@ -1,23 +1,19 @@
 {
-  "name": "Berasil",
+  "name": "erasil",
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/ramdhanstdi/berasil-be.git",
   "author": "berasil",
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.6.0",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
-    "jwt": "^0.2.0",
-    "prisma": "^5.5.2"
-  },
-  "scripts": {
-    "dev" : "nodemon index.js",
-    "start" : "node index.js"
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^5.6.0"
   }
 }
