--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
     "prisma": "^5.6.0"
   },
   "scripts": {
-    "dev" : "nodemon index.js",
-    "start" : "node index.js"
+    "dev": "nodemon index.js",
+    "start": "node index.js"
   }
 }
