--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,1 @@
-DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb
+DATABASE_URL="postgresql://postgres:root@localhost:5432/berasilDB"
