--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,14 @@
 { "version": 2, 
 "builds": [ 
-  { "src": "./index.js",
-  "use": "@vercel/node" } ],
+  { 
+    "src": "./index.js",
+    "use": "@vercel/node", 
+    "postbuild": "npx prisma generate"
+  }
+],
 "routes": [
-  { "src": "/(.*)",
-  "dest": "/" } ]
+  { 
+    "src": "/(.*)",
+    "dest": "/" } 
+]
 }
